--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.3",
     "vue": "^2.6.10",
+    "vue-carousel-3d": "^0.2.0",
+    "vue-loading-overlay": "^3.2.0",
     "vue-router": "^3.1.3",
+    "vue-star-rating": "^1.6.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
