--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.3",
+    "dotenv": "^8.2.0",
     "vue": "^2.6.10",
     "vue-carousel-3d": "^0.2.0",
     "vue-loading-overlay": "^3.2.0",
